# fastapi-keycloak-auth-demo

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
src/: config.py  exceptions.py  main.py  router.py
src/admin/: router.py  schemas.py
src/auth/: dependencies.py  router.py  schemas.py  service.py
src/developer/: router.py
src/manager/: router.py
src/resource/: router.py
src/users/: router.py
